feat: добавлено логгирование
Took 47 minutes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+logging.level.org.zalando.logbook=TRACE
+logging.level.ru.yandex.practicum.filmorate.controller=debug
+logging.level.ru.yandex.practicum.filmorate.controller.validators=debug
